--- a/sass/_board.scss
+++ b/sass/_board.scss
@@ -3,13 +3,19 @@
 }
 
 body {
-  //background: image-url("bg.jpg") left top;
-  font-size: 14px;
+  background: image-url("bg.jpg") left top;
+  font-size: 16px;
 }
 
-// .pile,
-// .stock,
-// .tableu,
-// .waste {
-//   width: 14.2%;
-// }
+.stock,
+.waste {
+  height: 14em;
+}
+
+.pile,
+.stock,
+.tableu,
+.waste {
+  display: inline-block;
+  width: 14.2%;
+}
