Added function to resize board.

--- a/sass/_board.scss
+++ b/sass/_board.scss
@@ -8,8 +8,8 @@ $pile-left-offset: $pile-width + 2em; // 1em of padding on each side.
 }
 
 body {
-  background: image-url("felt.jpg") left top;
-  font-size: 16px;
+  background: #518906 image-url("felt.jpg") left top;
+  font-size: 10px;
   position: relative;
 }
 
