Adds classes for different elements of the game.

--- a/sass/_cards.scss
+++ b/sass/_cards.scss
@@ -137,8 +137,10 @@ $card-width: 10em;
   .back {
     @extend %card-side;
     // http://ptrn.it/TZjjc4
-    background: $card-color url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAS0lEQVQYV2NkgAIW+57/MDYy/edgCSOIDyZwKYYpAisEmYQsADMZXQysEKQDJoFLI1whzHpspsOtJqQIRSG6SchOIc0zRAcPsQEOAOC2Qt8fLssgAAAAAElFTkSuQmCC);
-    border: 5px solid $card-color;
+    //background: $card-color url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAS0lEQVQYV2NkgAIW+57/MDYy/edgCSOIDyZwKYYpAisEmYQsADMZXQysEKQDJoFLI1whzHpspsOtJqQIRSG6SchOIc0zRAcPsQEOAOC2Qt8fLssgAAAAAElFTkSuQmCC);
+    background: $card-color image-url("card_pattern.svg");
+    background-size: 2em;
+    border: 0.4em solid $card-color;
     z-index: 30;
   }
 }
