Adds test implementation. Adds docs to the sass files. Fixes Phony Make targets.

--- a/src/sass/_cards.scss
+++ b/src/sass/_cards.scss
@@ -1,3 +1,11 @@
+// Copyright 2012 Ofir Picazo. All Rights Reserved.
+
+/**
+ * @fileoverview Styles for cards and suits.
+ *
+ * @author ofirpicazo@gmail.com (Ofir Picazo)
+ */
+
 @import "compass/css3/user-interface";
 
 $card-color: #F5F5F5;
