--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -1,3 +1,11 @@
+// Copyright 2012 Ofir Picazo. All Rights Reserved.
+
+/**
+ * @fileoverview Groups all the styles needed for the app.
+ *
+ * @author ofirpicazo@gmail.com (Ofir Picazo)
+ */
+
 @import "compass/reset";
 @import "compass/css3";
 
