--- a/src/sass/_board.scss
+++ b/src/sass/_board.scss
@@ -1,3 +1,11 @@
+// Copyright 2012 Ofir Picazo. All Rights Reserved.
+
+/**
+ * @fileoverview Board styles and positions.
+ *
+ * @author ofirpicazo@gmail.com (Ofir Picazo)
+ */
+
 $board-margin: 1em;
 $pile-height: 14em;
 $pile-width: 10em;
