--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -8,8 +8,13 @@
 
 @import "compass/reset";
 @import "compass/css3";
+@import "foundation/settings";
+@import "foundation/functions/all";
+@import "foundation/mixins/clearfix";
+@import "foundation/mixins/css-triangle";
+@import "foundation/mixins/font-size";
+@import "foundation/components/modules/buttons";
 
 // Solitario styles
-@import "settings";
 @import "board";
 @import "cards";
