Cleans up slant functions and creates slant effect on card drag and drop.

--- a/src/sass/_cards.scss
+++ b/src/sass/_cards.scss
@@ -28,14 +28,9 @@ $card-width: 10em;
   width: $card-width;
   z-index: 10;
 
-  &.slanted-left {
-    @include rotate(-3deg);
-    @include transform-origin(15%, 100%);
-  }
-
-  &.slanted-right {
+  &.slanted {
     @include rotate(3deg);
-    @include transform-origin(100%, 15%);
+    @include transform-origin(50%, 50%);
   }
 
   &.revealed .flipper {
