--- a/src/sass/_cards.scss
+++ b/src/sass/_cards.scss
@@ -65,7 +65,8 @@ $card-width: 10em;
     width: $card-width;
   }
 
-  &.dragging %card-side {
+  &.dragging %card-side,
+  &.fanned .front {
     @include single-box-shadow(rgba(0, 0, 0, 0.5), 0, 0, 0.5em);
   }
 
