--- a/src/sass/_board.scss
+++ b/src/sass/_board.scss
@@ -15,7 +15,7 @@ $pile-width: 10em;
 $pile-left-offset: $pile-width + 2em; // 1em of padding on each side.
 $text-shadow-color: #333;
 
-* {
+*, *:before, *:after {
   @include box-sizing(border-box);
   @include user-select(none);
   cursor: default;
@@ -45,6 +45,7 @@ body {
   @include single-box-shadow(rgba(0, 0, 0, 0.4), 0, -1.5em, 4em, 0, true);
   background: image-url("felt.jpg") left top;
   border-bottom: 3px solid rgba(0,0,0,0.4);
+  color: #F5F5F5;
   height: $controlbar-height;
   left: 0;
   position: absolute;
@@ -53,7 +54,6 @@ body {
 }
 
 #controlbar h1 {
-  color: #F5F5F5;
   font-size: ($controlbar-height / 3) * 2;  // 2/3rds of the bar height
   font-weight: bold;
   float: left;
@@ -76,6 +76,19 @@ body {
   color: #F5F5F5;
 }
 
+.score {
+  @include border-radius(1em);
+  @include single-box-shadow(rgba(30, 30, 30, 0.8), 0, 0, 0.5em, 0, true);
+  font-size: 1.5em;
+  font-weight: bold;
+  line-height: $controlbar-height / 2;
+  padding: 0 0.8em;
+  position: absolute;
+  right: 23em;
+  text-shadow: 1px 1px 2px $text-shadow-color;
+  top: 0.2em;
+}
+
 #board {
   left: 0;
   position: relative;
@@ -83,7 +96,6 @@ body {
 }
 
 .pile {
-  @include box-sizing(content-box);
   @include border-radius(0.5em);
   @include single-box-shadow(rgba(0, 0, 0, 0.8), 0, 0, 0.5em, 0, true);
   background-color: rgba(255, 255, 255, 0.1);
