--- a/src/sass/_board.scss
+++ b/src/sass/_board.scss
@@ -15,7 +15,7 @@ $pile-width: 10em;
 $pile-left-offset: $pile-width + 2em; // 1em of padding on each side.
 $text-shadow-color: #333;
 
-*, *:before, *:after {
+* {
   @include box-sizing(border-box);
   @include user-select(none);
   cursor: default;
@@ -78,15 +78,28 @@ body {
 
 .score {
   @include border-radius(1em);
+  @include perspective(1000);
   @include single-box-shadow(rgba(30, 30, 30, 0.8), 0, 0, 0.5em, 0, true);
   font-size: 1.5em;
   font-weight: bold;
+  left: 49.5em;
   line-height: $controlbar-height / 2;
   padding: 0 0.8em;
   position: absolute;
-  right: 23em;
   text-shadow: 1px 1px 2px $text-shadow-color;
   top: 0.2em;
+}
+
+#score-value {
+  @include transition-duration(0.3s);
+  @include transition-timing-function(ease-out);
+  @include transform-style(preserve-3d);
+  display: inline-block;
+  position: relative;
+
+  &.rotated {
+    @include rotateX(360deg);
+  }
 }
 
 #board {
@@ -96,6 +109,7 @@ body {
 }
 
 .pile {
+  @include box-sizing(content-box);
   @include border-radius(0.5em);
   @include single-box-shadow(rgba(0, 0, 0, 0.8), 0, 0, 0.5em, 0, true);
   background-color: rgba(255, 255, 255, 0.1);
