--- a/src/sass/_board.scss
+++ b/src/sass/_board.scss
@@ -41,7 +41,7 @@ body {
   position: relative;
 }
 
-#controlbar {
+.topbar {
   @include single-box-shadow(rgba(0, 0, 0, 0.4), 0, -1.5em, 4em, 0, true);
   background: image-url("felt.jpg") left top;
   border-bottom: 3px solid rgba(0,0,0,0.4);
@@ -51,29 +51,37 @@ body {
   position: absolute;
   top: 0;
   width: 100%;
+
+  & h1 {
+    font-size: ($controlbar-height / 3) * 2;  // 2/3rds of the bar height
+    font-weight: bold;
+    float: left;
+    line-height: $controlbar-height / 2;
+    margin: 0 1em;
+    text-shadow: 1px 1px 2px $text-shadow-color;
+  }
 }
 
-#controlbar h1 {
-  font-size: ($controlbar-height / 3) * 2;  // 2/3rds of the bar height
-  font-weight: bold;
+.controls {
   float: left;
-  line-height: $controlbar-height / 2;
-  margin: 0 1em;
-  text-shadow: 1px 1px 2px $text-shadow-color;
-}
 
-#controlbar .button {
-  background-color: rgba(0, 0, 0, 0.2);
-  border-color: rgba(0, 0, 0, 0.2);
-  color: #F5F5F5;
-  font-weight: normal;
-  margin-top: 0.5em;
-}
+  .button {
+    background-color: rgba(0, 0, 0, 0.2);
+    border-color: rgba(0, 0, 0, 0.2);
+    color: #F5F5F5;
+    cursor: pointer;
+    display: inline-block;
+    font-family: "Rambla", sans-serif;
+    font-size: 1.2em;
+    font-weight: bold;
+    line-height: $controlbar-height / 2;
 
-#controlbar .button:focus,
-#controlbar .button:hover {
-  background-color: rgba(64, 64, 64, 0.2);
-  color: #F5F5F5;
+    &:focus,
+    &:hover {
+      background-color: rgba(64, 64, 64, 0.2);
+      color: #F5F5F5;
+    }
+  }
 }
 
 .score {
@@ -88,17 +96,17 @@ body {
   position: absolute;
   text-shadow: 1px 1px 2px $text-shadow-color;
   top: 0.2em;
-}
 
-#score-value {
-  @include transition-duration(0.3s);
-  @include transition-timing-function(ease-out);
-  @include transform-style(preserve-3d);
-  display: inline-block;
-  position: relative;
+  #score-value {
+    @include transition-duration(0.3s);
+    @include transition-timing-function(ease-out);
+    @include transform-style(preserve-3d);
+    display: inline-block;
+    position: relative;
 
-  &.rotated {
-    @include rotateX(360deg);
+    &.rotated {
+      @include rotateX(360deg);
+    }
   }
 }
 
