Refactors game initialization and allows for creating new games using the "New game" button.

--- a/src/sass/_board.scss
+++ b/src/sass/_board.scss
@@ -98,7 +98,7 @@ body {
   top: 0.2em;
 
   #score-value {
-    @include transition-duration(0.3s);
+    @include transition-duration(300ms);
     @include transition-timing-function(ease-out);
     @include transform-style(preserve-3d);
     display: inline-block;
